# dnd_db_2

./: .gitignore  AGENT.md  AGENT_TASKS.md  CONTRIBUTING_AGENT.md  Makefile  README 2.md  README.md  ROADMAP.md  pyproject.toml
scripts/: codex_add_character_sheet_snapshot.sh  codex_add_starting_equipment_seeder.sh  codex_add_sync_character.sh  codex_apply_class_features.sh  codex_apply_subclass_features.sh  codex_character_tools.sh  codex_fix_class_vs_subclass.sh  codex_fix_inventory_fk_detection.sh  codex_fix_seed_demo_character.sh  codex_fix_subclass_applier.sh  codex_next_tools.sh  codex_overwrite_apply_class_features.sh  codex_overwrite_seed_demo_character.sh  codex_patch_apply_class_features_filter.sh  codex_patch_queries.sh
tests/: test_api_client.py  test_character_crud.py  test_character_progression.py  test_choices_loader.py  test_db_init.py  test_grants_loader.py  test_import_classes.py  test_import_conditions.py  test_import_features.py  test_import_items.py  test_import_monsters.py  test_import_spells.py  test_import_spells_full.py  test_import_subclasses.py  test_load_choices.py  test_prereqs_loader.py  test_queries.py  test_raw_entity_upsert.py  test_relationship_loader.py  test_snapshots.py  test_verify.py  test_verify_choices.py  test_verify_conditions.py  test_verify_grants.py  test_verify_items.py  test_verify_monsters.py  test_verify_prereqs.py  test_verify_relationships.py
tools/: _inv_fk.py  apply_class_features.py  apply_subclass_features.py  character_sheet_preview.py  character_sheet_snapshot.py  db_health_report.py  db_integrity.py  db_sanity_counts.py  db_smoke.py  inspect_subclasses.py  (+8 more)
(+51 files in other folders)
