[project]
name = "dnd-db"
version = "0.1.0"
description = "Local D&D 5e SRD database built from 5e-bits APIs"
requires-python = ">=3.10"

dependencies = [
  "requests",
  "sqlalchemy>=2.0",
  "sqlmodel",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["F"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
